--- a/notebooks/Figure1A-E.ipynb
+++ b/notebooks/Figure1A-E.ipynb
@@ -153,7 +153,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Obtain the subtags from the somite tag\n",
@@ -190,6 +196,8 @@
     "            y[tags_all[k]].append(tracks.spots_features['Y'][j])\n",
     "            z[tags_all[k]].append(tracks.spots_features['Z'][j])\n",
     "            ids_save[tags_all[k]].append(tracks.spots_features['ID'][j])\n",
+    "            #CH CHANGE TO AVOID NUMPY DEPRECATION WARNING\n",
+    "            #tag_save[j] = int(np.where(tags_all == tags_all[k])[0])\n",
     "            tag_save[j] = int(np.where(tags_all == tags_all[k])[0][0])\n",
     "## Cell 36 has the wrong tag, it is actually TB to PSMd\n",
     "tag_save[36] = 1.0"
@@ -421,7 +429,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
