--- a/notebooks/AP_Dynamics_in_culture_part1.ipynb
+++ b/notebooks/AP_Dynamics_in_culture_part1.ipynb
@@ -551,7 +551,7 @@
     "            \n",
     "        count += 1  \n",
     "        \n",
-    "    fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')\n",
+    "    #fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')\n",
     "        "
    ]
   },
@@ -981,7 +981,7 @@
     "            \n",
     "        count += 1  \n",
     "        \n",
-    "    fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')\n",
+    "    #fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')\n",
     "        "
    ]
   },
@@ -1412,7 +1412,7 @@
     "            \n",
     "        count += 1  \n",
     "        \n",
-    "    fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')\n",
+    "    #fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')\n",
     "        "
    ]
   },
@@ -1829,7 +1829,7 @@
     "            \n",
     "        count += 1  \n",
     "        \n",
-    "    fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')"
+    "    #fig.savefig('../Data/Figure S3/Results/LoopinMespPeaksTroughs_%s_Exp%d.pdf'%(condition,val1), format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2296,7 +2296,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/PSM2vsPSM4-LastPeakTimes.pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/PSM2vsPSM4-LastPeakTimes.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2475,7 +2475,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/PSM3vsPSM4-LastPeakTimes.pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/PSM3vsPSM4-LastPeakTimes.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2654,7 +2654,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/TBvsPSM4-LastPeakTimes.pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/TBvsPSM4-LastPeakTimes.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2724,7 +2724,7 @@
     "plt.title(' ')\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/PeakHistogram-PSM4.pdf', format='pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/PeakHistogram-PSM4.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2801,7 +2801,7 @@
     "plt.title(' ')\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/PeakHistogram-PSM3.pdf', format='pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/PeakHistogram-PSM3.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -2878,7 +2878,7 @@
     "plt.title(' ')\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/PeakHistogram-TB.pdf', format='pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/PeakHistogram-TB.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -3078,7 +3078,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/SuccessivePeriod-Amplitude-PSM3.pdf', format='pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/SuccessivePeriod-Amplitude-PSM3.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -3167,7 +3167,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/SuccessivePeriod-Amplitude-PSM4.pdf', format='pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/SuccessivePeriod-Amplitude-PSM4.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -3256,7 +3256,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('../Data/Figure S3/Results/SuccessivePeriod-Amplitude-TB.pdf', format='pdf', bbox_inches='tight')"
+    "#fig.savefig('../Data/Figure S3/Results/SuccessivePeriod-Amplitude-TB.pdf', format='pdf', bbox_inches='tight')"
    ]
   },
   {
