--- a/notebooks/AP_Dynamics_in_culture_part2.ipynb
+++ b/notebooks/AP_Dynamics_in_culture_part2.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -43,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "PSM2 = pd.read_excel('../Data/Figure 3/last_peak_time_axis(ADJ and Unadj) May 29.xlsx', sheet_name='PSM2', header=[0,1])\n",
@@ -55,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -205,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "PSM4_cells_id = []\n",
@@ -244,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -274,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -297,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -320,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -343,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -373,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -433,8 +453,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -488,7 +510,7 @@
     "ax.set_ylabel('Her1 Last Peak [min]', fontsize=20);\n",
     "\n",
     "plt.show()\n",
-    "fig.savefig('../../Figures Linked Alt Version Nov 2021/ABR_Edits/Her1LastPeak_TB-PSM4-3-2.pdf', bbox_inches='tight')"
+    "#fig.savefig('../../Figures Linked Alt Version Nov 2021/ABR_Edits/Her1LastPeak_TB-PSM4-3-2.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -503,7 +525,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2038,5 +2062,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
